--- a/GServer/Unit-Tests/Unit-Tests.csproj
+++ b/GServer/Unit-Tests/Unit-Tests.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Unit_Tests</RootNamespace>
     <AssemblyName>Unit-Tests</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -54,6 +54,7 @@
     <Compile Include="PrimitivesTest.cs" />
     <Compile Include="PrivateObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RPCTest.cs" />
     <Compile Include="SerializationTest.cs" />
     <Compile Include="TestModels\s.cs" />
     <Compile Include="TestSocket.cs" />
@@ -64,6 +65,10 @@
     <ProjectReference Include="..\GServer.Containers\GServer.Containers.csproj">
       <Project>{4238a9a0-da81-4e1c-9345-c5bbae9b4ea6}</Project>
       <Name>GServer.Containers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GServer.RPC\GServer.RPC.csproj">
+      <Project>{ec41889e-07f7-48b6-bda4-c7e711a3a5a4}</Project>
+      <Name>GServer.RPC</Name>
     </ProjectReference>
     <ProjectReference Include="..\GServer\GServer.csproj">
       <Project>{7d55b9cf-74f8-4d40-8c5f-9ae0021424d4}</Project>
