- Changed project lang versions.
- Added lock usage to NetworkView.

--- a/GServer/GServer.Plugins/GServer.Plugins.csproj
+++ b/GServer/GServer.Plugins/GServer.Plugins.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\GServer.Containers\GServer.Containers.csproj" />
